Adding more tests.